Assertion failure: !mEventDispatchingSuspended, at /builds/worker/workspace/build/src/dom/xhr/XMLHttpRequestMainThread.cpp:1259
Categories
(Core :: DOM: Networking, defect, P2)
Tracking
()
People
(Reporter: jkratzer, Assigned: kershaw)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, testcase, Whiteboard: [fuzzblocker][necko-triaged])
Attachments
(2 files, 1 obsolete file)
Testcase found while fuzzing mozilla-central rev ed50266b84e2. Testcase requires a build with --enable-fuzzing and may take several reloads in order to reproduce.
This testcase has trigger several thousand times in the last few weeks and is having a significant effect on fuzzing performance.
Assertion failure: !mEventDispatchingSuspended, at /builds/worker/workspace/build/src/dom/xhr/XMLHttpRequestMainThread.cpp:1259
rax = 0x0000559985c81e20 rdx = 0x0000000000000000
rcx = 0x00007f5c5391c5ee rbx = 0x00007f5c42819400
rsi = 0x00007f5c5e8578b0 rdi = 0x00007f5c5e856680
rbp = 0x00007fff603faf00 rsp = 0x00007fff603faf00
r8 = 0x00007f5c5e8578b0 r9 = 0x00007f5c5f9d9740
r10 = 0x0000000000000002 r11 = 0x0000000000000000
r12 = 0x00007fff603faf60 r13 = 0x0000000000000000
r14 = 0x00007fff603faf78 r15 = 0x00007f5c42988520
rip = 0x00007f5c4fe6a33c
OS|Linux|0.0.0 Linux 4.19.13-coreos #1 SMP Mon Jan 7 23:51:04 -00 2019 x86_64
CPU|amd64|family 6 model 79 stepping 1|8
GPU|||
Crash|SIGSEGV|0x0|0
0|0|libxul.so|mozilla::dom::XMLHttpRequestMainThread::SuspendEventDispatching()|hg:hg.mozilla.org/mozilla-central:dom/xhr/XMLHttpRequestMainThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1259|0x16
0|1|libxul.so|mozilla::dom::XMLHttpRequestMainThread::SendInternal(mozilla::dom::BodyExtractorBase const*, bool)|hg:hg.mozilla.org/mozilla-central:dom/xhr/XMLHttpRequestMainThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|2896|0x8
0|2|libxul.so|mozilla::dom::XMLHttpRequestMainThread::Send(JSContext*, mozilla::dom::Nullable<mozilla::dom::DocumentOrBlobOrArrayBufferViewOrArrayBufferOrFormDataOrURLSearchParamsOrUSVString> const&, mozilla::ErrorResult&)|hg:hg.mozilla.org/mozilla-central:dom/xhr/XMLHttpRequestMainThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|2725|0xd
0|3|libxul.so|mozilla::dom::XMLHttpRequest_Binding::send|s3:gecko-generated-sources:b55a2839cfdc8635cff7afae491e2b244f0652a1f5330bcb27996cf3e43605929dc7c4b7fe7dbe7bf2d76e892562ffad35ba457d46477fbe64b2901e6d5d0767/dom/bindings/XMLHttpRequestBinding.cpp:|1345|0x24
0|4|libxul.so|bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*)|hg:hg.mozilla.org/mozilla-central:dom/bindings/BindingUtils.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|3153|0x24
0|5|libxul.so|CallJSNative(JSContext*, bool ()(JSContext, unsigned int, JS::Value*), JS::CallArgs const&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|442|0x13
0|6|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|534|0x12
0|7|libxul.so|InternalCall|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|589|0xd
0|8|libxul.so|Interpret|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|593|0xf
0|9|libxul.so|js::RunScript(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|422|0xb
0|10|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|562|0xf
0|11|libxul.so|InternalCall|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|589|0xd
0|12|libxul.so|js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|605|0x5
0|13|libxul.so|js::ForwardingProxyHandler::call(JSContext*, JS::Handle<JSObject*>, JS::CallArgs const&) const|hg:hg.mozilla.org/mozilla-central:js/src/proxy/Wrapper.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|162|0x23
0|14|libxul.so|js::CrossCompartmentWrapper::call(JSContext*, JS::Handle<JSObject*>, JS::CallArgs const&) const|hg:hg.mozilla.org/mozilla-central:js/src/proxy/CrossCompartmentWrapper.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|237|0x13
0|15|libxul.so|xpc::XrayWrapper<js::CrossCompartmentWrapper, xpc::JSXrayTraits>::call(JSContext*, JS::Handle<JSObject*>, JS::CallArgs const&) const|hg:hg.mozilla.org/mozilla-central:js/xpconnect/wrappers/XrayWrapper.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|2148|0x58
0|16|libxul.so|js::Proxy::call(JSContext*, JS::Handle<JSObject*>, JS::CallArgs const&)|hg:hg.mozilla.org/mozilla-central:js/src/proxy/Proxy.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|504|0x15
0|17|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|508|0x8
0|18|libxul.so|InternalCall|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|589|0xd
0|19|libxul.so|Interpret|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|593|0xf
0|20|libxul.so|js::RunScript(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|422|0xb
0|21|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|562|0xf
0|22|libxul.so|InternalCall|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|589|0xd
0|23|libxul.so|js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|605|0x5
0|24|libxul.so|js::CallSelfHostedFunction(JSContext*, JS::Handle<js::PropertyName*>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/SelfHosting.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1943|0x17
0|25|libxul.so|js::jit::InterpretResume(JSContext*, JS::Handle<JSObject*>, JS::Handle<JS::Value>, JS::Handle<js::PropertyName*>, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/jit/VMFunctions.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1004|0x5
0|26|||||0xa207fbb9fef
0|27|||||0xa207fbadac4
0|28|libxul.so|EnterJit|hg:hg.mozilla.org/mozilla-central:js/src/jit/Jit.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|105|0x29
0|29|libxul.so|js::RunScript(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|407|0xb
0|30|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|562|0xf
0|31|libxul.so|InternalCall|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|589|0xd
0|32|libxul.so|js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|605|0x5
0|33|libxul.so|js::CallSelfHostedFunction(JSContext*, JS::Handle<js::PropertyName*>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/SelfHosting.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1943|0x17
0|34|libxul.so|AsyncFunctionResume|hg:hg.mozilla.org/mozilla-central:js/src/vm/AsyncFunction.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|115|0x2a
0|35|libxul.so|PromiseReactionJob|hg:hg.mozilla.org/mozilla-central:js/src/builtin/Promise.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1654|0x117
0|36|libxul.so|CallJSNative(JSContext*, bool ()(JSContext, unsigned int, JS::Value*), JS::CallArgs const&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|442|0x13
0|37|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|534|0x12
0|38|libxul.so|InternalCall|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|589|0xd
0|39|libxul.so|js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|605|0x5
0|40|libxul.so|JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/jsapi.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|2636|0x1c
0|41|libxul.so|mozilla::dom::PromiseJobCallback::Call(JSContext*, JS::Handle<JS::Value>, mozilla::ErrorResult&)|s3:gecko-generated-sources:76e4bf7ec3dff9aabb3e44f25219114b78c0f488b9799e1b7f5fb9ca97307bf858bcd2681c0e4e8e8fc1b2f9893267e81d3a825904f0c19b7cd41058d267423f/dom/bindings/PromiseBinding.cpp:|26|0x5
0|42|libxul.so|mozilla::dom::PromiseJobCallback::Call(mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*)|s3:gecko-generated-sources:8ff597fee16137a41c5c768d4731e63150ba2f32aaccb2a1985be307f0fad868e61bb63f08de085a377133bcfcb41787e072b5d1f0cda75a29d00492f676fce1/dist/include/mozilla/dom/PromiseBinding.h:|91|0x12
0|43|libxul.so|mozilla::PromiseJobRunnable::Run(mozilla::AutoSlowOperation&)|hg:hg.mozilla.org/mozilla-central:xpcom/base/CycleCollectedJSContext.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|236|0x47
0|44|libxul.so|mozilla::CycleCollectedJSContext::PerformMicroTaskCheckPoint(bool)|hg:hg.mozilla.org/mozilla-central:xpcom/base/CycleCollectedJSContext.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|599|0x17
0|45|libxul.so|mozilla::CycleCollectedJSContext::AfterProcessTask(unsigned int)|hg:hg.mozilla.org/mozilla-central:xpcom/base/CycleCollectedJSContext.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|438|0x7
0|46|libxul.so|XPCJSContext::AfterProcessTask(unsigned int)|hg:hg.mozilla.org/mozilla-central:js/xpconnect/src/XPCJSContext.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1273|0xb
0|47|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1240|0xc
0|48|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|486|0x11
0|49|libxul.so|nsThread::Shutdown()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|882|0xd
0|50|libxul.so|mozilla::MediaStreamGraphShutdownThreadRunnable::Run()|hg:hg.mozilla.org/mozilla-central:dom/media/GraphDriver.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|158|0x15
0|51|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|295|0x15
0|52|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1180|0x15
0|53|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|486|0x11
0|54|libxul.so|nsThread::Shutdown()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|882|0xd
0|55|libxul.so|mozilla::MediaStreamGraphShutdownThreadRunnable::Run()|hg:hg.mozilla.org/mozilla-central:dom/media/GraphDriver.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|158|0x15
0|56|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|295|0x15
0|57|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1180|0x15
0|58|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|486|0x11
0|59|libxul.so|nsThread::Shutdown()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|882|0xd
0|60|libxul.so|mozilla::MediaStreamGraphShutdownThreadRunnable::Run()|hg:hg.mozilla.org/mozilla-central:dom/media/GraphDriver.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|158|0x15
0|61|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|295|0x15
0|62|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1180|0x15
0|63|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|486|0x11
0|64|libxul.so|nsThread::Shutdown()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|882|0xd
0|65|libxul.so|mozilla::MediaStreamGraphShutdownThreadRunnable::Run()|hg:hg.mozilla.org/mozilla-central:dom/media/GraphDriver.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|158|0x15
0|66|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|295|0x15
0|67|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1180|0x15
0|68|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|486|0x11
0|69|libxul.so|nsThread::Shutdown()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|882|0xd
0|70|libxul.so|mozilla::MediaStreamGraphShutdownThreadRunnable::Run()|hg:hg.mozilla.org/mozilla-central:dom/media/GraphDriver.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|158|0x15
0|71|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|295|0x15
0|72|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1180|0x15
0|73|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|486|0x11
0|74|libxul.so|nsThread::Shutdown()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|882|0xd
0|75|libxul.so|mozilla::MediaStreamGraphShutdownThreadRunnable::Run()|hg:hg.mozilla.org/mozilla-central:dom/media/GraphDriver.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|158|0x15
0|76|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|295|0x15
0|77|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1180|0x15
0|78|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|486|0x11
0|79|libxul.so|nsThread::Shutdown()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|882|0xd
0|80|libxul.so|mozilla::MediaStreamGraphShutdownThreadRunnable::Run()|hg:hg.mozilla.org/mozilla-central:dom/media/GraphDriver.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|158|0x15
0|81|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|295|0x15
0|82|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1180|0x15
0|83|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|486|0x11
0|84|libxul.so|nsThread::Shutdown()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|882|0xd
0|85|libxul.so|mozilla::MediaStreamGraphShutdownThreadRunnable::Run()|hg:hg.mozilla.org/mozilla-central:dom/media/GraphDriver.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|158|0x15
0|86|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|295|0x15
0|87|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1180|0x15
0|88|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|486|0x11
0|89|libxul.so|nsThread::Shutdown()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|882|0xd
0|90|libxul.so|mozilla::MediaStreamGraphShutdownThreadRunnable::Run()|hg:hg.mozilla.org/mozilla-central:dom/media/GraphDriver.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|158|0x15
0|91|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|295|0x15
0|92|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1180|0x15
0|93|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|486|0x11
0|94|libxul.so|nsThread::Shutdown()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|882|0xd
0|95|libxul.so|mozilla::MediaStreamGraphShutdownThreadRunnable::Run()|hg:hg.mozilla.org/mozilla-central:dom/media/GraphDriver.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|158|0x15
0|96|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|295|0x15
0|97|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:ed50266b84e2a489c5e97cf68b98b116d6ce4501|1180|0x15
0|98|libxul.so|_fini|||0x267b954
Updated•6 years ago
|
Comment 2•6 years ago
|
||
:hsinyi who would be available to help get this fuzz blocker fixed?
I will attached a Pernosco session.
Updated•6 years ago
|
Comment 3•6 years ago
|
||
Comment 4•6 years ago
|
||
(In reply to Tyson Smith [:tsmith] from comment #2)
:hsinyi who would be available to help get this fuzz blocker fixed?
I will attached a Pernosco session.
Hey Nhi, could you please help me here? :)
Comment 5•6 years ago
|
||
Kershaw, could you take a look? Thanks!
Assignee | ||
Updated•6 years ago
|
Assignee | ||
Comment 6•6 years ago
|
||
Comment 8•6 years ago
|
||
bugherder |
Comment 9•6 years ago
|
||
bugherder |
Updated•6 years ago
|
Comment 10•6 years ago
|
||
Thanks for the help everyone! Fixing fuzzblockers is very much appreciated :)
Description
•